cmake_minimum_required(VERSION 3.1)
project(Football)

set(wxWidgets_USE_LIBS)
if (WIN32)
	if (CMAKE_BUILD_TYPE EQUAL DEBUG)
		set(wxWidgets_CONFIGURATION  mswud)
	else ()
		set(wxWidgets_CONFIGURATION  mswu)
	endif ()
	find_package(wxWidgets COMPONENTS adv core base png)
else (WIN32)
	set(wxWidgets_USE_UNICODE ON)
	if (CMAKE_BUILD_TYPE EQUAL DEBUG)
		set(wxWidgets_USE_DEBUG ON)
	else ()
		set(wxWidgets_USE_DEBUG OFF)
	endif ()
	find_package(wxWidgets COMPONENTS adv core base)
endif (WIN32)

if (wxWidgets_FOUND)
	include(${wxWidgets_USE_FILE})
	include_directories(${CMAKE_SOURCE_DIR}/headers)
	file(GLOB_RECURSE SRCS *.cpp)
	add_executable(football ${SRCS})
	if(MSVC)
		set_target_properties(football PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
	endif (MSVC)
	target_link_libraries(football ${wxWidgets_LIBRARIES} ${SQLITE3_LIBRARIES})
	if (WIN32)
		target_link_libraries(football UxTheme.lib)
	endif (WIN32)
else()
	message("wxWidgets not found!")
endif()
